--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ authors = ["Jiří Cihelka"]
 description = "Rust implementation of a parser of the FEF format"
 repository = "https://github.com/jiricekcz/fef-rs"
 license = "MIT OR Apache-2.0"
+keywords = ["fef"]
+categories = ["parser-implementations", "mathematics"]
 version = "0.0.1"
 edition = "2021"
 
