--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,9 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0", optional = true, features = ["derive"] }
+
+[package.metadata.docs.rs]
+# document all features
+all-features = true
+# defines the configuration attribute `docsrs`
+rustdoc-args = ["--cfg", "docsrs"]
